[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Art/title.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Title.gd" type="Script" id=2]
[ext_resource path="res://Scenes/helpButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Art/options.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/new.png" type="Texture" id=5]

[node name="Title" type="Node2D"]
script = ExtResource( 2 )

[node name="title" type="Sprite" parent="."]
position = Vector2( 516.229, 327.025 )
scale = Vector2( 1.01313, 0.656632 )
texture = ExtResource( 1 )

[node name="start" type="Button" parent="."]
margin_left = 15.6758
margin_top = 76.166
margin_right = 434.0
margin_bottom = 198.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Button" parent="."]
margin_left = 527.255
margin_top = 69.8502
margin_right = 1010.0
margin_bottom = 230.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="helpButton" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionsMenu" type="Sprite" parent="."]
visible = false
position = Vector2( -2.49353, 1.22449 )
scale = Vector2( 1.013, 0.657 )
texture = ExtResource( 4 )
centered = false

[node name="easy" type="CheckBox" parent="optionsMenu"]
margin_left = 676.009
margin_top = 299.506
margin_right = 700.009
margin_bottom = 323.506
__meta__ = {
"_edit_use_anchors_": false
}

[node name="med" type="CheckBox" parent="optionsMenu"]
margin_left = 676.009
margin_top = 371.856
margin_right = 700.009
margin_bottom = 395.856
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hard" type="CheckBox" parent="optionsMenu"]
margin_left = 676.009
margin_top = 440.142
margin_right = 700.009
margin_bottom = 464.142
__meta__ = {
"_edit_use_anchors_": false
}

[node name="insane" type="CheckBox" parent="optionsMenu"]
margin_left = 941.91
margin_top = 440.142
margin_right = 965.91
margin_bottom = 464.142
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new" type="Sprite" parent="."]
position = Vector2( 687.601, 70.2351 )
scale = Vector2( 0.21164, 0.133333 )
texture = ExtResource( 5 )
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="optionsMenu/easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="optionsMenu/med" to="." method="_on_med_pressed"]
[connection signal="pressed" from="optionsMenu/hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="optionsMenu/insane" to="." method="_on_insane_pressed"]
